@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.7.10-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-07-10 16:20:30, took 00:13:06, with 60 workers, on 3440 cases, 0 failed, 0 traces, 7 retries
+-;-;-;2024-07-10 19:19:07, took 00:12:38, with 60 workers, on 3442 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1421,6 +1421,8 @@ http://sources.freertr.org/cfg/opnflw-rout03.tst;opnflw-rout03.tst;success;openf
 http://sources.freertr.org/cfg/opnflw-rout04.tst;opnflw-rout04.tst;success;openflow: mpls routing
 http://sources.freertr.org/cfg/opnflw-rout05.tst;opnflw-rout05.tst;success;openflow: multicast routing
 http://sources.freertr.org/cfg/opnflw-rout06.tst;opnflw-rout06.tst;success;openflow: mldp routing
+http://sources.freertr.org/cfg/opnflw-rout07.tst;opnflw-rout07.tst;success;openflow: ip routing over backplane
+http://sources.freertr.org/cfg/opnflw-rout08.tst;opnflw-rout08.tst;success;openflow: mpls routing over backplane
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
 http://sources.freertr.org/cfg/p4lang-acl003.tst;p4lang-acl003.tst;success;p4lang: egress access list
