@@ -1417,6 +1417,8 @@ qc pass: openflow: ip routing
 qc pass: openflow: mpls routing
 qc pass: openflow: multicast routing
 qc pass: openflow: mldp routing
+qc pass: openflow: ip routing over backplane
+qc pass: openflow: mpls routing over backplane
 qc pass: p4lang: copp
 qc pass: p4lang: ingress access list
 qc pass: p4lang: egress access list
@@ -3442,7 +3444,6 @@ todo: acl to have fake knob that syn-rst, udp-port-unreach, at the dataplanes
 todo: inspection dropped sessions do be able to close the sessions properly at layer4
 todo: consider draft-ietf-idr-performance-routing
 todo: ioam as rfc9452
-todo: openflow to have 2 label support and stack to p4lang
 todo: bridge and router have renumber knob
 todo: mist natives p4fwd to report the boot messages through the control channel in dataplane-says
 todo: mist natives p4fwd to report all the error messages in the control channel in dataplane-says
