@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.7.10-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-07-10 16:20:30, took 00:13:06, with 60 workers, on 3440 cases, 0 failed, 0 traces, 7 retries<br/>
+tested: 2024-07-10 19:19:07, took 00:12:38, with 60 workers, on 3442 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1438,6 +1438,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/opnflw-rout04.tst">opnflw-rout04.tst</a></td><td>success</td><td>openflow: mpls routing</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/opnflw-rout05.tst">opnflw-rout05.tst</a></td><td>success</td><td>openflow: multicast routing</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/opnflw-rout06.tst">opnflw-rout06.tst</a></td><td>success</td><td>openflow: mldp routing</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/opnflw-rout07.tst">opnflw-rout07.tst</a></td><td>success</td><td>openflow: ip routing over backplane</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/opnflw-rout08.tst">opnflw-rout08.tst</a></td><td>success</td><td>openflow: mpls routing over backplane</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl001.tst">p4lang-acl001.tst</a></td><td>success</td><td>p4lang: copp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl002.tst">p4lang-acl002.tst</a></td><td>success</td><td>p4lang: ingress access list</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl003.tst">p4lang-acl003.tst</a></td><td>success</td><td>p4lang: egress access list</td></tr>
