@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.7.10-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-07-10 16:29:02, took 00:08:14, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2024-07-10 19:30:37, took 00:11:12, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
