@@ -548,7 +548,6 @@ todo: acl to have fake knob that syn-rst, udp-port-unreach, at the dataplanes
 todo: inspection dropped sessions do be able to close the sessions properly at layer4
 todo: consider draft-ietf-idr-performance-routing
 todo: ioam as rfc9452
-todo: openflow to have 2 label support and stack to p4lang
 todo: bridge and router have renumber knob
 todo: mist natives p4fwd to report the boot messages through the control channel in dataplane-says
 todo: mist natives p4fwd to report all the error messages in the control channel in dataplane-says
