@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.7.10-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-07-10 16:29:02, took 00:08:14, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-07-10 19:30:37, took 00:11:12, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
